--- a/PROG POE Part 1/appsettings.json
+++ b/PROG POE Part 1/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=PROG_POE_DB;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
